yaml-examples/pgadmin4/pgadmin4-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgadmin4
  namespace: postgres
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4:6
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: data
          - mountPath: /pgadmin4/servers.json
            name: config
      volumes:
      - name: config
        emptyDir: { }
      - name: data
        emptyDir: { }
