yaml-examples/pgadmin4/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: default
spec:
  selector:
    app: pgadmin4
  ports:
  - port: 80
    targetPort: 80
